cmake_minimum_required(VERSION 3.15)
project(C_Programming C)

set(CMAKE_C_STANDARD 99)

add_executable(C_Programming main.c)
add_subdirectory(test)
add_executable(prac3 mooc/prac3.c)
add_executable(prac1 mooc/prac1.c)
add_executable(prac2 mooc/prac2.c)
add_executable(prac4 mooc/prac4.c)
add_executable(prac5 mooc/prac5.c)
add_executable(prac6 mooc/prac6.c)
add_executable(prac7 mooc/prac7.c)
add_executable(prac8 mooc/prac8.c)
add_executable(prac9 mooc/prac9.c)
add_executable(prac10 mooc/prac10.c)
add_executable(prac11 mooc/prac11.c)
add_executable(prac12 mooc/prac12.c)
add_executable(prac13 mooc/prac13.c)
add_executable(prac14 mooc/prac14.c)
add_executable(prac15 mooc/prac15.c)
add_executable(prac16 mooc/prac16.c)
add_executable(prac17 mooc/prac17.c)
add_executable(prac18 mooc/prac18.c)
add_executable(prac19 mooc/prac19.c)
add_executable(prac20 mooc/prac20.c)
add_executable(prac21 mooc/prac21.c)
add_executable(prac22 mooc/prac22.c)
add_executable(prac23 mooc/prac23.c)
add_executable(prac24 mooc/prac24.c)
add_executable(prac25 mooc/prac25.c)
add_executable(prac26 mooc/prac26.c)
add_executable(prac27 mooc/prac27.c)
add_executable(prac28 mooc/prac28.c)
add_executable(prac29 mooc/prac29.c)
add_executable(prac30 mooc/prac30.c)
add_executable(prac31 mooc/prac31.c)
add_executable(prac32 mooc/prac32.c)
add_executable(prac33 mooc/prac33.c)
add_executable(1_1 zju_experiment/1_1.c)
add_executable(1_2 zju_experiment/1_2.c)
add_executable(1_3 zju_experiment/1_3.c)
add_executable(1_4 zju_experiment/1_4.c)
add_executable(1_5 zju_experiment/1_5.c)
add_executable(1_6 zju_experiment/1_6.c)
add_executable(1-7 zju_experiment/1_7.c)
add_executable(1_8 zju_experiment/1_8.c)
add_executable(2-1-1 zju_experiment/2-1-1.c)
add_executable(2_1_2 zju_experiment/2_1_2.c)
add_executable(2_1_3 zju_experiment/2_1_3.c)
add_executable(2_1_4 zju_experiment/2_1_4.c)
add_executable(2_1_5 zju_experiment/2_1_5.c)
add_executable(2_1_6 zju_experiment/2_1_6.c)
add_executable(2_1_7 zju_experiment/2_1_7.c)
add_executable(2_2_1 zju_experiment/2_2_1.c)
add_executable(2_2_2 zju_experiment/2_2_2.c)
add_executable(2_2_3 zju_experiment/2_2_3.c)
add_executable(2_2_4 zju_experiment/2_2_4.c)
add_executable(2_2_5 zju_experiment/2_2_5.c)
add_executable(2_2_6 zju_experiment/2_2_6.c)
add_executable(2_2_7 zju_experiment/2_2_7.c)
add_executable(2_2_8 zju_experiment/2_2_8.c)
add_executable(2_2_9 zju_experiment/2_2_9.c)
add_executable(2_3_1 zju_experiment/2_3_1.c)
add_executable(2_3_2 zju_experiment/2_3_2.c)
add_executable(2_3_3 zju_experiment/2_3_3.c)
add_executable(2_3_4 zju_experiment/2_3_4.c)
add_executable(2_3_5 zju_experiment/2_3_5.c)
add_executable(2_3_6 zju_experiment/2_3_6.c)
add_executable(2_3_7 zju_experiment/2_3_7.c)
add_executable(2_4_2 zju_experiment/2_4_2.c)
add_executable(2_4_3 zju_experiment/2_4_3.c)
add_executable(2_4_4 zju_experiment/2_4_4.c)
add_executable(2_4_5 zju_experiment/2_4_5.c)
add_executable(2_4_7 zju_experiment/2_4_7.c)
add_executable(3_1 zju_experiment/3_1.c)
add_executable(test1 test/test1.c)
add_executable(3_2 zju_experiment/3_2.c)
add_executable(3_3 zju_experiment/3_3.c)
add_executable(3_4 zju_experiment/3_4.c)
add_executable(3_5 zju_experiment/3_5.c)
add_executable(3_6 zju_experiment/3_6.c)
add_executable(3_7 zju_experiment/3_7.c)
add_executable(3_8 zju_experiment/3_8.c)
add_executable(3_9 zju_experiment/3_9.c)
add_executable(3_10 zju_experiment/3_10.c)
add_executable(3_11 zju_experiment/3_11.c)
add_executable(test2 test/test2.c)
add_executable(4_1_1 zju_experiment/4_1_1.c)
add_executable(4_1_2 zju_experiment/4_1_2.c)
add_executable(4_1_3 zju_experiment/4_1_3.c)
add_executable(4_1_4 zju_experiment/4_1_4.c)
add_executable(4_1_5 zju_experiment/4_1_5.c)
add_executable(4_1_6 zju_experiment/4_1_6.c)
add_executable(4_1_7 zju_experiment/4_1_7.c)
add_executable(4_1_8 zju_experiment/4_1_8.c)
add_executable(4_1_9 zju_experiment/4_1_9.c)
add_executable(4_1_10 zju_experiment/4_1_10.c)
add_executable(4_1_11 zju_experiment/4_1_11.c)
add_executable(4_1_12 zju_experiment/4_1_12.c)