cmake_minimum_required(VERSION 3.15)
project(C_Programming C)

set(CMAKE_C_STANDARD 99)

add_executable(C_Programming main.c)
add_subdirectory(test)
add_executable(prac3 mooc/prac3.c)
add_executable(prac1 mooc/prac1.c)
add_executable(prac2 mooc/prac2.c)
add_executable(prac4 mooc/prac4.c)
add_executable(prac5 mooc/prac5.c)
add_executable(prac6 mooc/prac6.c)
add_executable(prac7 mooc/prac7.c)
add_executable(prac8 mooc/prac8.c)
add_executable(prac9 mooc/prac9.c)
add_executable(prac10 mooc/prac10.c)
add_executable(prac11 mooc/prac11.c)
add_executable(prac12 mooc/prac12.c)
add_executable(prac13 mooc/prac13.c)
add_executable(prac14 mooc/prac14.c)
add_executable(prac15 mooc/prac15.c)
add_executable(prac16 mooc/prac16.c)
add_executable(prac17 mooc/prac17.c)
add_executable(prac18 mooc/prac18.c)
add_executable(prac19 mooc/prac19.c)
add_executable(prac20 mooc/prac20.c)
add_executable(prac21 mooc/prac21.c)
add_executable(prac22 mooc/prac22.c)
add_executable(prac23 mooc/prac23.c)
add_executable(prac24 mooc/prac24.c)
add_executable(prac25 mooc/prac25.c)
add_executable(prac26 mooc/prac26.c)
add_executable(prac27 mooc/prac27.c)
add_executable(prac28 mooc/prac28.c)
add_executable(prac29 mooc/prac29.c)
add_executable(prac30 mooc/prac30.c)
add_executable(prac31 mooc/prac31.c)
add_executable(prac32 mooc/prac32.c)
add_executable(prac33 mooc/prac33.c)
add_executable(1_1 zju_experiment/1/1_1.c)
add_executable(1_2 zju_experiment/1/1_2.c)
add_executable(1_3 zju_experiment/1/1_3.c)
add_executable(1_4 zju_experiment/1/1_4.c)
add_executable(1_5 zju_experiment/1/1_5.c)
add_executable(1_6 zju_experiment/1/1_6.c)
add_executable(1-7 zju_experiment/1/1_7.c)
add_executable(1_8 zju_experiment/1/1_8.c)
add_executable(2-1-1 zju_experiment/2/2-1-1.c)
add_executable(2_1_2 zju_experiment/2/2_1_2.c)
add_executable(2_1_3 zju_experiment/2/2_1_3.c)
add_executable(2_1_4 zju_experiment/2/2_1_4.c)
add_executable(2_1_5 zju_experiment/2/2_1_5.c)
add_executable(2_1_6 zju_experiment/2/2_1_6.c)
add_executable(2_1_7 zju_experiment/2/2_1_7.c)
add_executable(2_2_1 zju_experiment/2/2_2_1.c)
add_executable(2_2_2 zju_experiment/2/2_2_2.c)
add_executable(2_2_3 zju_experiment/2/2_2_3.c)
add_executable(2_2_4 zju_experiment/2/2_2_4.c)
add_executable(2_2_5 zju_experiment/2/2_2_5.c)
add_executable(2_2_6 zju_experiment/2/2_2_6.c)
add_executable(2_2_7 zju_experiment/2/2_2_7.c)
add_executable(2_2_8 zju_experiment/2/2_2_8.c)
add_executable(2_2_9 zju_experiment/2/2_2_9.c)
add_executable(2_3_1 zju_experiment/2/2_3_1.c)
add_executable(2_3_2 zju_experiment/2/2_3_2.c)
add_executable(2_3_3 zju_experiment/2/2_3_3.c)
add_executable(2_3_4 zju_experiment/2/2_3_4.c)
add_executable(2_3_5 zju_experiment/2/2_3_5.c)
add_executable(2_3_6 zju_experiment/2/2_3_6.c)
add_executable(2_3_7 zju_experiment/2/2_3_7.c)
add_executable(2_4_2 zju_experiment/2/2_4_2.c)
add_executable(2_4_3 zju_experiment/2/2_4_3.c)
add_executable(2_4_4 zju_experiment/2/2_4_4.c)
add_executable(2_4_6 zju_experiment/2/2_4_6.c)
add_executable(2_4_7 zju_experiment/2/2_4_7.c)
add_executable(3_1 zju_experiment/3/3_1.c)
add_executable(test1 test/test1.c)
add_executable(3_2 zju_experiment/3/3_2.c)
add_executable(3_3 zju_experiment/3/3_3.c)
add_executable(3_4 zju_experiment/3/3_4.c)
add_executable(3_5 zju_experiment/3/3_5.c)
add_executable(3_6 zju_experiment/3/3_6.c)
add_executable(3_7 zju_experiment/3/3_7.c)
add_executable(3_8 zju_experiment/3/3_8.c)
add_executable(3_9 zju_experiment/3/3_9.c)
add_executable(3_10 zju_experiment/3/3_10.c)
add_executable(3_11 zju_experiment/3/3_11.c)
add_executable(test2 test/test2.c)
add_executable(4_1_1 zju_experiment/4/4_1_1.c)
add_executable(4_1_2 zju_experiment/4/4_1_2.c)
add_executable(4_1_3 zju_experiment/4/4_1_3.c)
add_executable(4_1_4 zju_experiment/4/4_1_4.c)
add_executable(4_1_5 zju_experiment/4/4_1_5.c)
add_executable(4_1_6 zju_experiment/4/4_1_6.c)
add_executable(4_1_7 zju_experiment/4/4_1_7.c)
add_executable(4_1_8 zju_experiment/4/4_1_8.c)
add_executable(4_1_9 zju_experiment/4/4_1_9.c)
add_executable(4_1_10 zju_experiment/4/4_1_10.c)
add_executable(4_1_11 zju_experiment/4/4_1_11.c)
add_executable(4_1_12 zju_experiment/4/4_1_12.c)
add_executable(4_2_2 zju_experiment/4/4_2_2.c)
add_executable(4_2_3 zju_experiment/4/4_2_3.c)
add_executable(4_2_4 zju_experiment/4/4_2_4.c)
add_executable(4_2_5 zju_experiment/4/4_2_5.c)
add_executable(test3 test/test3.c)
add_executable(4_2_6 zju_experiment/4/4_2_6.c)
add_executable(4_2_7 zju_experiment/4/4_2_7.c)
add_executable(4_2_8 zju_experiment/4/4_2_8.c)
add_executable(4_2_9 zju_experiment/4/4_2_9.c)
add_executable(2_4_1 zju_experiment/2/2_4_1.c)
add_executable(2_4_5 zju_experiment/2/2_4_5.c)
add_executable(test4 test/test4.c)
add_executable(5_1 zju_experiment/5/5_1.c)
add_executable(5_2 zju_experiment/5/5_2.c)
add_executable(5_3 zju_experiment/5/5_3.c)
add_executable(5_4 zju_experiment/5/5_4.c)
add_executable(5_5 zju_experiment/5/5_5.c)
add_executable(5_6 zju_experiment/5/5_6.c)
add_executable(5_7 zju_experiment/5/5_7.c)
add_executable(5_8 zju_experiment/5/5_8.c)
add_executable(5_9 zju_experiment/5/5_9.c)
add_executable(5_10 zju_experiment/5/5_10.c)
add_executable(5_11 zju_experiment/5/5_11.c)
add_executable(week1 mooc_assignment/week1.c)
add_executable(prac34 mooc/prac34.c)
add_executable(prac35 mooc/prac35.c)
add_executable(prac36 mooc/prac36.c)
add_executable(prac37 mooc/prac37.c)
add_executable(prac38 mooc/prac38.c)
add_executable(prac39 mooc/prac39.c)
add_executable(prac40 mooc/prac40.c)
add_executable(prac41 mooc/prac41.c)
add_executable(prac42 mooc/prac42.c)
add_executable(prac43 mooc/prac43.c)
add_executable(prac44 mooc/prac44.c)
add_executable(prac45 mooc/prac45.c)
add_executable(prac46 mooc/prac46.c)
add_executable(test5 test/test5.c)
add_executable(prac47 mooc/prac47.c)
add_executable(prac48 mooc/prac48.c)
add_executable(test6 test/test6.c)
add_executable(prac49 mooc/prac49.c)
add_executable(test7 test/test7.c)
add_executable(test8 test/test8.c)
add_executable(6_1 zju_experiment/6/6_1.c)
add_executable(6_8 zju_experiment/6/6_8.c)
add_executable(test9 test/test9.c)
add_executable(test10 test/test10.c)
add_executable(6_9 zju_experiment/6/6_9.c)
add_executable(6_2 zju_experiment/6/6_2.c)
add_executable(6_3 zju_experiment/6/6_3.c)
add_executable(6_4 zju_experiment/6/6_4.c)
add_executable(6_5 zju_experiment/6/6_5.c)
add_executable(6_6 zju_experiment/6/6_6.c)
add_executable(6_7 zju_experiment/6/6_7.c)
add_executable(test11 test/test11.c)
add_executable(7_1_1 zju_experiment/7/7_1_1.c)
add_executable(7_1_2 zju_experiment/7/7_1_2.c)
add_executable(7_1_3 zju_experiment/7/7_1_3.c)
add_executable(test12 test/test12.c)
add_executable(7_1_4 zju_experiment/7/7_1_4.c)
add_executable(7_1_5 zju_experiment/7/7_1_5.c)
add_executable(7_1_6 zju_experiment/7/7_1_6.c)
add_executable(7_1_7 zju_experiment/7/7_1_7.c)
add_executable(7_1_8 zju_experiment/7/7_1_8.c)
add_executable(7_1_9 zju_experiment/7/7_1_9.c)
add_executable(7_1_10 zju_experiment/7/7_1_10.c)
add_executable(7_1_11 zju_experiment/7/7_1_11.c)
add_executable(test13 test/test13.c)
add_executable(7_1_12 zju_experiment/7/7_1_12.c)
add_executable(test14 test/test14.c)
add_executable(test15 test/test15.c)
add_executable(7_1_13 zju_experiment/7/7_1_13.c)
add_executable(7_2_1 zju_experiment/7/7_2_1.c)
add_executable(7_2_2 zju_experiment/7/7_2_2.c)
add_executable(7_2_3 zju_experiment/7/7_2_3.c)
add_executable(7_2_4 zju_experiment/7/7_2_4.c)
add_executable(test16 test/test16.c)
add_executable(7_2_5 zju_experiment/7/7_2_5.c)
add_executable(7_2_6 zju_experiment/7/7_2_6.c)
add_executable(7_2_7 zju_experiment/7/7_2_7.c)
add_executable(7_2_8 zju_experiment/7/7_2_8.c)
add_executable(7_2_9 zju_experiment/7/7_2_9.c)
add_executable(7_2_10 zju_experiment/7/7_2_10.c)
add_executable(7_3_1 zju_experiment/7/7_3_1.c)
add_executable(7_3_2 zju_experiment/7/7_3_2.c)
add_executable(test17 test/test17.c)
add_executable(test18 test/test18.c)
add_executable(test19 test/test19.c)
add_executable(7_3_3 zju_experiment/7/7_3_3.c)
add_executable(7_3_4 zju_experiment/7/7_3_4.c)
add_executable(7_3_5 zju_experiment/7/7_3_5.c)
add_executable(7_3_6 zju_experiment/7/7_3_6.c)
add_executable(7_3_7 zju_experiment/7/7_3_7.c)
add_executable(7_3_8 zju_experiment/7/7_3_8.c)
add_executable(7_3_9 zju_experiment/7/7_3_9.c)
add_executable(7_3_10 zju_experiment/7/7_3_10.c)
add_executable(8_1_1 zju_experiment/8/8_1_1.c)
add_executable(8_1_2 zju_experiment/8/8_1_2.c)
add_executable(8_1_3 zju_experiment/8/8_1_3.c)
add_executable(8_1_4 zju_experiment/8/8_1_4.c)
add_executable(8_1_5 zju_experiment/8/8_1_5.c)
add_executable(8_1_6 zju_experiment/8/8_1_6.c)
add_executable(test20 test/test20.c)
add_executable(8_1_7 zju_experiment/8/8_1_7.c)
add_executable(8_1_8 zju_experiment/8/8_1_8.c)
add_executable(8_2_3 zju_experiment/8/8_2_3.c)
add_executable(8_2_4 zju_experiment/8/8_2_4.c)
add_executable(8_2_5 zju_experiment/8/8_2_5.c)
add_executable(8_2_6 zju_experiment/8/8_2_6.c)
add_executable(8_2_7 zju_experiment/8/8_2_7.c)
add_executable(8_2_9 zju_experiment/8/8_2_9.c)
add_executable(test21 test/test21.c)
add_executable(8_1_9 zju_experiment/8/8_1_9.c)
add_executable(8_2_1 zju_experiment/8/8_2_1.c)
add_executable(8_2_2 zju_experiment/8/8_2_2.c)
add_executable(8_2_8 zju_experiment/8/8_2_8.c)
add_executable(8_2_10 zju_experiment/8/8_2_10.c)
add_executable(9_1 zju_experiment/9/9_1.c)
add_executable(9_2 zju_experiment/9/9_2.c)
add_executable(9_3 zju_experiment/9/9_3.c)
add_executable(test22 test/test22.c)
add_executable(9_5 zju_experiment/9/9_5.c)
add_executable(9_6 zju_experiment/9/9_6.c)
add_executable(9_7 zju_experiment/9/9_7.c)
add_executable(9_8 zju_experiment/9/9_8.c)
add_executable(9_9 zju_experiment/9/9_9.c)
add_executable(9_10 zju_experiment/9/9_10.c)
add_executable(9_4 zju_experiment/9/9_4.c)
add_executable(10_1 zju_experiment/10/10_1.c)
add_executable(test23 test/test23.c)
add_executable(10_2 zju_experiment/10/10_2.c)
add_executable(10_3 zju_experiment/10/10_3.c)
add_executable(10_4 zju_experiment/10/10_4.c)
add_executable(10_5 zju_experiment/10/10_5.c)
add_executable(10_6 zju_experiment/10/10_6.c)
add_executable(10_7 zju_experiment/10/10_7.c)
add_executable(10_8 zju_experiment/10/10_8.c)
add_executable(10_9 zju_experiment/10/10_9.c)
add_executable(10_10 zju_experiment/10/10_10.c)
add_executable(11_1_2 zju_experiment/11/11_1_2.c)
add_executable(test24 test/test24.c)
add_executable(11_1_3 zju_experiment/11/11_1_3.c)
add_executable(11_1_4 zju_experiment/11/11_1_4.c)
add_executable(11_1_6 zju_experiment/11/11_1_6.c)
add_executable(11_1_9 zju_experiment/11/11_1_9.c)
add_executable(11_2_1 zju_experiment/11/11_2_1.c)
add_executable(11_1_1 zju_experiment/11/11_1_1.c)
add_executable(test25 test/test25.c)
add_executable(11_1_7 zju_experiment/11/11_1_7.c)
add_executable(11_1_8 zju_experiment/11/11_1_8.c)